# mensatrain

./: .gitignore  mensatrain.py  pyproject.toml  requirements.txt
