[tool.poetry]
name = "mensatrain"
version = "0.1.0"
description = ""
authors = ["Andrej Rode <mail@andrejro.de>", "Dominik Rimpf <dev@drimpf.de>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.3.0"
sqlalchemy = "^1.3.13"
python-dateutil = "^2.8.1"
tabulate = "^0.8.6"
giphy_client = "^1.0.0"
mensaparser = {git = "https://github.com/domrim/mensaparser.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
